--- a/amp/index.html
+++ b/amp/index.html
@@ -201,20 +201,20 @@
 <body>
    <div class="container">
       <header>
-         <center><a href="https://1221mantap.com/" target="_blank" rel="noreferrer noopener"><amp-img id="image"
+         <center><a href="https://rebrand.ly/mpo1221xbebek" target="_blank" rel="noreferrer noopener"><amp-img id="image"
                   class="animated tada infinite slower" src="https://images.linkcdn.cloud/V2/65/logo/logo-431133778.webp"
                   alt="MPO1221" width="400" height="100" layout="intrinsic"></amp-img></a>
       </header>
       <div class="welcome">
          <h3>MPO1221 HARI INI LAGI GAMPANG SCATTER!!</h3>
       </div>   
-      <a href="https://1221mantap.com/" target="_blank" rel="noopener noreferrer nofollow">
+      <a href="https://rebrand.ly/mpo1221xbebek" target="_blank" rel="noopener noreferrer nofollow">
       <amp-img
          src="https://mobile.jtrussell.io/images/banner-terbaru-mpo1221-1024x1024.webp"
          width="400" height="400" layout="intrinsic" class="banner"></amp-img> <br>
-      <a href="https://1221mantap.com/" target="_blank" rel="noreferrer noopener"
+      <a href="https://rebrand.ly/mpo1221xbebek" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">LOGIN</a>
-      <a href="https://1221mantap.com/" target="_blank" rel="noreferrer noopener"
+      <a href="https://rebrand.ly/mpo1221xbebek" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-daftar">DAFTAR</a>
         <a href="https://direct.lc.chat/10944342/" target="_blank" rel="noreferrer noopener"
          role="button" class="btn-login">LIVECHAT</a>
